Подключил шрифт HelveticaNeue

--- a/httpdocs/wa-data/public/shop/themes/profitbuy/head.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/head.html
@@ -4,6 +4,7 @@
 <link href="{$wa_active_theme_url}owl.carousel.css?v2.0.0" rel="stylesheet" type="text/css" />
 
 <link href="/wa-content/font/ruble/MyriadPro/fontface.css" rel="stylesheet" type="text/css" />
+<link href="/wa-content/font/ruble/HelveticaNeue/fontface.css" rel="stylesheet" type="text/css" />
 <link href="{$wa_active_theme_url}art-style.css?v2.0.0" rel="stylesheet" type="text/css" />
 <link href="{$wa_active_theme_url}art-media.css?v2.0.0" rel="stylesheet" type="text/css" />
 
