добавил разделитель и ориентир для слайдера с товарами

--- a/httpdocs/wa-data/public/shop/themes/profitbuy/home.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/home.html
@@ -66,6 +66,12 @@
                 <div class="fur_treug"><span>{$cat_name.name|escape}</span></div>
             </div>
             </div>
+
+
+
+
+<p style="font-size:25px;color:red;text-align:center">По макету здесь должен выводиться слайдер с товарами</p>
+<hr class="art-hr-slider">
             <div class="block  category-id-{$cat_name.id}">
 
                 {foreach $cat_name.childs as $brand} {$sc_img = shopCategoryImagesPlugin::getCategoryImageUrl($brand.id)}
