положил див стрелки во внутрь класса .art-sehen-alles

--- a/httpdocs/wa-data/public/shop/themes/profitbuy/home.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/home.html
@@ -90,10 +90,8 @@
             </div>
             <div class="art-show-button btn-id-{$cat_name.id}">
                 <div id="art-vipadashka" class="art-wrapper-show-button">
-                    <div class="art-sehen-alles">смотреть всё</div>
-                    <div class="art-strelka">
-                        <img src="/wa-data/public/site/themes/profitbuy/img/strelka.png">
-                    </div>
+                    <div class="art-sehen-alles">смотреть всё<div class="art-strelka"></div></div>
+
                 </div>
             </div>
         </div>
