--- a/httpdocs/wa-data/public/shop/themes/profitbuy/head.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/head.html
@@ -45,11 +45,7 @@
 {* <script type="text/javascript" src="{$wa_active_theme_url}jquery.session.js?v{$wa_theme_version}"></script> *}
 
 {*custom js*}
-{* <script type="text/javascript" src="{$wa_active_theme_url}a.amazing.js?v{$wa_theme_version}"></script> выключил *}
-{*amazing.js*}
-{*<script type="text/javascript" src="{$wa_active_theme_url}amazing.js?v{$wa_theme_version}"></script>*}
-{*podbor.js*}
-{* <script type="text/javascript" src="{$wa_active_theme_url}podbor.js?v{$wa_theme_version}"></script> пустой файл*}
+<script type="text/javascript" src="{$wa_active_theme_url}pocketflame.js?v{$wa_theme_version}"></script>
 
 
 
