сделал проверку на серый цвет на главной

--- a/httpdocs/wa-data/public/shop/themes/profitbuy/head.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/head.html
@@ -5,6 +5,7 @@
 
 <link href="/wa-content/font/ruble/MyriadPro/fontface.css" rel="stylesheet" type="text/css" />
 <link href="/wa-content/font/ruble/HelveticaNeue/fontface.css" rel="stylesheet" type="text/css" />
+<link href="/wa-content/font/ruble/GillSans/fontface.css" rel="stylesheet" type="text/css" />
 <link href="{$wa_active_theme_url}art-style.css?v2.0.0" rel="stylesheet" type="text/css" />
 <link href="{$wa_active_theme_url}art-media.css?v2.0.0" rel="stylesheet" type="text/css" />
 
@@ -44,11 +45,7 @@
 {* <script type="text/javascript" src="{$wa_active_theme_url}jquery.session.js?v{$wa_theme_version}"></script> *}
 
 {*custom js*}
-{* <script type="text/javascript" src="{$wa_active_theme_url}a.amazing.js?v{$wa_theme_version}"></script> выключил *}
-{*amazing.js*}
-{*<script type="text/javascript" src="{$wa_active_theme_url}amazing.js?v{$wa_theme_version}"></script>*}
-{*podbor.js*}
-{* <script type="text/javascript" src="{$wa_active_theme_url}podbor.js?v{$wa_theme_version}"></script> пустой файл*}
+<script type="text/javascript" src="{$wa_active_theme_url}pocketflame.js?v{$wa_theme_version}"></script>
 
 
 
