--- a/httpdocs/wa-data/public/shop/themes/profitbuy/product.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/product.html
@@ -53,10 +53,10 @@
 	</div>
 
 	<div class="col-grid m12 l12 art-wrap-cartochka">
-			<div class="col-grid s6 {if $is_sidebar_product}l7{else}l7{/if}">
+			<div class="col-grid s12 {if $is_sidebar_product}l7{else}l7{/if}">
 					<div class="fill-background">{include file="product.images.html" inline}</div>
 			</div>
-			<div class="col-grid s6 {if $is_sidebar_product}l5{else}l5{/if} art-wrapper-fon-cart">
+			<div class="col-grid s12 {if $is_sidebar_product}l5{else}l5{/if} art-wrapper-fon-cart">
 					<div class="wrapper-features-items">
 							<div {*id="cart-flyer" *} class="product-sidebar fill-background art-product-sidebar">
 									{if !empty($product.rating) && $product.rating > 0}
@@ -111,205 +111,208 @@
 							</div>
 							{/if}
 							{* end Скрытие определенных характеристик*}
-							<div class="art-photo_and_social">
-									{if !empty($theme_settings.share)}
-									<!-- share -->
-									<div class="art-wrap-social">
-										<div><span>Поделиться:</span></div>
-										<!--{$theme_settings.share}-->
-										<div class="art-social-cart">
-											<ul>
-											<li class="art-social-item-cart">
-													<a href="#">
-															<img src="/wa-data/public/site/themes/profitbuy/img/instagram_black.png"></a>
-											</li>
-											<li class="art-social-item-cart">
-													<a href="#">
-															<img src="/wa-data/public/site/themes/profitbuy/img/facebook_black.png"></a>
-											</li>
-											<li class="art-social-item-cart">
-													<a href="#">
-															<img src="/wa-data/public/site/themes/profitbuy/img/vk_black.png"></a>
-											</li>
-											<li class="art-social-item-cart">
-													<a href="#">
-															<img src="/wa-data/public/site/themes/profitbuy/img/twitter_black.png"></a>
-											</li>
-										</ul>
-									</div>
-									</div>
-									{/if}
-							</div>
+
 					</div>
 			</div>
 
 	</div>
 	<div class="product-info col-grid s12 {if !$is_sidebar_product}l12{/if}" id="overview">
+		<div class="col-grid s12 l7">
+			<div class="fill-background">
+				{if !empty($theme_settings.tab_product)}
+				<nav class="art-skrit-nav">
+					<ul id="product-tabs-nav">
+						{if $product.description}
+						<li class="selected">
+							<a data-name="description" href="{$wa->shop->productUrl($product)}">[`Description`]</a>
+						</li>
+						{/if} {if $product.features}
+						<li>
+							<a data-name="features" href="{$wa->shop->productUrl($product)}">[`Features`]</a>
+						</li>
+						{/if} {if !empty($theme_settings.reviews)}
+						<li>
+							<a data-name="reviews" href="{$wa->shop->productUrl($product, 'reviews')}">[`Reviews`]</a>
+						</li>
+						{/if} {if !empty($theme_settings.reviews_vk)}
+						<li>
+							<a data-name="reviews_vk" href="{$wa->shop->productUrl($product)}">[`Reviews`] VK</a>
+						</li>
+						{/if} {if !empty($theme_settings.reviews_fb)}
+						<li>
+							<a data-name="reviews_fb" href="{$wa->shop->productUrl($product)}">[`Reviews`] Facebook</a>
+						</li>
+						{/if} {foreach $product.pages as $page}
+						<li>
+							<a data-name="page_{$page.url}" href="{$wa->
+							shop->productUrl($product, 'page', ['page_url' => $page.url])}">{$page.name|escape}
+						</a>
+						</li>
+						{/foreach}
+						<!--plugin hook: 'frontend_product.menu' -->
+						{* @event frontend_product.%plugin_id%.menu *} {foreach $frontend_product as $_}{$_.menu}{/foreach}
+					</ul>
+				</nav>
+				{/if}
+				<div id="product-tabs" {if !empty($theme_settings.tab_product)} class="product-tab-active art-product-tab-active" {/if}>
 
-		<div class="fill-background">
-			{if !empty($theme_settings.tab_product)}
-			<nav class="art-skrit-nav">
-				<ul id="product-tabs-nav">
+
 					{if $product.description}
-					<li class="selected">
-						<a data-name="description" href="{$wa->shop->productUrl($product)}">[`Description`]</a>
-					</li>
-					{/if} {if $product.features}
-					<li>
-						<a data-name="features" href="{$wa->shop->productUrl($product)}">[`Features`]</a>
-					</li>
-					{/if} {if !empty($theme_settings.reviews)}
-					<li>
-						<a data-name="reviews" href="{$wa->shop->productUrl($product, 'reviews')}">[`Reviews`]</a>
-					</li>
-					{/if} {if !empty($theme_settings.reviews_vk)}
-					<li>
-						<a data-name="reviews_vk" href="{$wa->shop->productUrl($product)}">[`Reviews`] VK</a>
-					</li>
-					{/if} {if !empty($theme_settings.reviews_fb)}
-					<li>
-						<a data-name="reviews_fb" href="{$wa->shop->productUrl($product)}">[`Reviews`] Facebook</a>
-					</li>
-					{/if} {foreach $product.pages as $page}
-					<li>
-						<a data-name="page_{$page.url}" href="{$wa->
-						shop->productUrl($product, 'page', ['page_url' => $page.url])}">{$page.name|escape}
-					</a>
-					</li>
-					{/foreach}
-					<!--plugin hook: 'frontend_product.menu' -->
-					{* @event frontend_product.%plugin_id%.menu *} {foreach $frontend_product as $_}{$_.menu}{/foreach}
-				</ul>
-			</nav>
-			{/if}
-			<div id="product-tabs" {if !empty($theme_settings.tab_product)} class="product-tab-active art-product-tab-active" {/if}>
+					<!-- <h2 class="product-tabs-nav-trigger-wrapper">
+					<a class="product-tabs-nav-trigger" data-name="description" href="{$wa->shop->productUrl($product)}">[`Description`]</a>
+				</h2> -->
+					<div id="product-tab-description" class="product-tab">
+						<div id="product-description" itemprop="description">{$product.description}</div>
+					</div>
+					{/if}
 
-
-				{if $product.description}
-				<h2 class="product-tabs-nav-trigger-wrapper">
-				<a class="product-tabs-nav-trigger" data-name="description" href="{$wa->shop->productUrl($product)}">[`Description`]</a>
-			</h2>
-				<div id="product-tab-description" class="product-tab">
-					<div id="product-description" itemprop="description">{$product.description}</div>
-				</div>
-				{/if}
-
-				{*
-				<!--Характеристики товара-->
-				{if $product.features}
-				<!-- product features -->
-				{$_valid_features = ['color','weight']}
-				<h2 class="product-tabs-nav-trigger-wrapper">
-				<a class="product-tabs-nav-trigger" data-name="features" href="{$wa->shop->productUrl($product)}">[`Features`]</a>
-			</h2>
-				<div id="product-tab-features" class="product-tab">
-					<table class="features striped" id="product-features">
-						{foreach $product.features as $f_code => $f_value}
-						<tr{if $features[$f_code].type=='divider' } class="divider" {/if}>
-							<td class="name">{$features[$f_code].name|escape}</td>
-							<td class="value" {if in_array($f_code|escape, $_valid_features)} itemprop="{$f_code|escape}" {/if}>
-								{if is_array($f_value)} {if $features[$f_code].type == 'color'} {implode('
-								<br /> ', $f_value)} {else} {implode(', ', $f_value)} {/if} {else} {$f_value} {/if}
-							</td>
-							</tr>
-							{/foreach}
-					</table>
-				</div>
-				{/if}
-				<!--END Характеристики товара-->
-				*} {*
-				<!--Отзывы-->
-				{if !empty($theme_settings.reviews)}
-				<h2 class="product-tabs-nav-trigger-wrapper">
-				<a class="product-tabs-nav-trigger" data-name="reviews" href="{$wa->
-					shop->productUrl($product, 'reviews')}">[`User reviews`](
-					<span class="reviews-count">{$reviews_total_count}</span>
-					)
-				</a>
-			</h2> {/if}
-				<!--END Отзывы-->
-				*}
-				<!--Предпросмотр-->
-				{if !empty($theme_settings.reviews) && $theme_settings.reviews == 'webasyst'}
-				<!-- product reviews -->
-				<div id="product-tab-reviews" class="product-tab">
-					<section class="reviews" id="product-reviews">
-						{*
-						<h2>{sprintf('[`%s reviews`]', $product.name|escape)}</h2> *} {if !empty($rates)}
-						<p class="rating">
-							[`Average customer rating:`] {$wa->shop->ratingHtml($product.rating, 16)} (
-							<a href="reviews/">{$reviews_total_count}</a> ) {if $product.rating > 0}
-							<span class="hint">{sprintf('[`%s out of 5 stars`]', $product.rating)}</span> {/if}
-						</p>
-
-						<table class="rating-distribution">
-							{$_total_count = 0} {foreach $rates as $_rate => $_count} {$_total_count = $_total_count + $_count} {/foreach} {* foreach $rates as $_rate => $_count *} {for $i = 5 to 0 step -1} {if empty($rates[$i]) || !$rates[$i]}{$_count = 0}{else}{$_count = $rates[$i]}{/if}
-							{if $i || $_count}
-							<tr>
-								<td class="min-width hint">{$_count}</td>
-								<td>
-									<div class="bar">
-										<div class="filling" style="width: {if $_total_count >
-										0}{str_replace(',','.', 100*$_count/$_total_count)}{else}0{/if}%;{if !$i} background: #ddd;{/if}">
-										</div>
-									</div>
+					{*
+					<!--Характеристики товара-->
+					{if $product.features}
+					<!-- product features -->
+					{$_valid_features = ['color','weight']}
+					<h2 class="product-tabs-nav-trigger-wrapper">
+					<a class="product-tabs-nav-trigger" data-name="features" href="{$wa->shop->productUrl($product)}">[`Features`]</a>
+				</h2>
+					<div id="product-tab-features" class="product-tab">
+						<table class="features striped" id="product-features">
+							{foreach $product.features as $f_code => $f_value}
+							<tr{if $features[$f_code].type=='divider' } class="divider" {/if}>
+								<td class="name">{$features[$f_code].name|escape}</td>
+								<td class="value" {if in_array($f_code|escape, $_valid_features)} itemprop="{$f_code|escape}" {/if}>
+									{if is_array($f_value)} {if $features[$f_code].type == 'color'} {implode('
+									<br /> ', $f_value)} {else} {implode(', ', $f_value)} {/if} {else} {$f_value} {/if}
 								</td>
-								<td>
-									<span class="rating">
-									{for $j=1 to $i}
-									<i class="icon16 star"></i>
-									{forelse}
-									<span class="hint">[`no rate`]</span> {/for}
-									</span>
-								</td>
-							</tr>
-							{/if} {/for}
+								</tr>
+								{/foreach}
 						</table>
-						{/if}
-						<ul>
-							{foreach $reviews as $review}
-							<li data-id={$review.id} data-parent-id="0">{include file="review.html" reply_allowed=false inline}</li>
-							{/foreach}
-						</ul>
-						{if !$reviews}
-						<p>
-							{sprintf('[`Be the first to
-							<a href="%s">write a review</a> of this product!`]', 'reviews/')}
-						</p>
-						{else} {sprintf(_w( 'Read
-						<a href="%s">all %d review</a> on %s', 'Read
-						<a href="%s">all %d reviews</a> on %s', $reviews_total_count, false ), 'reviews/', $reviews_total_count, $product.name|escape) } {/if}
-					</section>
+					</div>
+					{/if}
+					<!--END Характеристики товара-->
+					*} {*
+					<!--Отзывы-->
+					{if !empty($theme_settings.reviews)}
+					<h2 class="product-tabs-nav-trigger-wrapper">
+					<a class="product-tabs-nav-trigger" data-name="reviews" href="{$wa->
+						shop->productUrl($product, 'reviews')}">[`User reviews`](
+						<span class="reviews-count">{$reviews_total_count}</span>
+						)
+					</a>
+				</h2> {/if}
+					<!--END Отзывы-->
+					*}
+					<!--Предпросмотр-->
+					{if !empty($theme_settings.reviews) && $theme_settings.reviews == 'webasyst'}
+					<!-- product reviews -->
+					<div id="product-tab-reviews" class="product-tab">
+						<section class="reviews" id="product-reviews">
+							{*
+							<h2>{sprintf('[`%s reviews`]', $product.name|escape)}</h2> *} {if !empty($rates)}
+							<p class="rating">
+								[`Average customer rating:`] {$wa->shop->ratingHtml($product.rating, 16)} (
+								<a href="reviews/">{$reviews_total_count}</a> ) {if $product.rating > 0}
+								<span class="hint">{sprintf('[`%s out of 5 stars`]', $product.rating)}</span> {/if}
+							</p>
+
+							<table class="rating-distribution">
+								{$_total_count = 0} {foreach $rates as $_rate => $_count} {$_total_count = $_total_count + $_count} {/foreach} {* foreach $rates as $_rate => $_count *} {for $i = 5 to 0 step -1} {if empty($rates[$i]) || !$rates[$i]}{$_count = 0}{else}{$_count = $rates[$i]}{/if}
+								{if $i || $_count}
+								<tr>
+									<td class="min-width hint">{$_count}</td>
+									<td>
+										<div class="bar">
+											<div class="filling" style="width: {if $_total_count >
+											0}{str_replace(',','.', 100*$_count/$_total_count)}{else}0{/if}%;{if !$i} background: #ddd;{/if}">
+											</div>
+										</div>
+									</td>
+									<td>
+										<span class="rating">
+										{for $j=1 to $i}
+										<i class="icon16 star"></i>
+										{forelse}
+										<span class="hint">[`no rate`]</span> {/for}
+										</span>
+									</td>
+								</tr>
+								{/if} {/for}
+							</table>
+							{/if}
+							<ul>
+								{foreach $reviews as $review}
+								<li data-id={$review.id} data-parent-id="0">{include file="review.html" reply_allowed=false inline}</li>
+								{/foreach}
+							</ul>
+							{if !$reviews}
+							<p>
+								{sprintf('[`Be the first to
+								<a href="%s">write a review</a> of this product!`]', 'reviews/')}
+							</p>
+							{else} {sprintf(_w( 'Read
+							<a href="%s">all %d review</a> on %s', 'Read
+							<a href="%s">all %d reviews</a> on %s', $reviews_total_count, false ), 'reviews/', $reviews_total_count, $product.name|escape) } {/if}
+						</section>
+					</div>
+					{/if}
+					<!--END Предпросмотр-->
+					{* {if !empty($theme_settings.reviews_vk)}
+					<h2 class="product-tabs-nav-trigger-wrapper">
+					<a class="product-tabs-nav-trigger" data-name="reviews_vk" href="{$wa->shop->productUrl($product)}">[`User reviews`] VK</a>
+				</h2>
+					<div id="product-tab-reviews_vk" class="product-tab">{$theme_settings.reviews_vk}</div>
+					{/if} {if !empty($theme_settings.reviews_fb)}
+					<h2 class="product-tabs-nav-trigger-wrapper">
+					<a class="product-tabs-nav-trigger" data-name="reviews_fb" href="{$wa->shop->productUrl($product)}">[`User reviews`] Facebook</a>
+				</h2>
+					<div id="product-tab-reviews_fb" class="product-tab">{$theme_settings.reviews_fb}</div>
+					{/if} *}
+					{foreach $product.pages as $page}
+					<h2 class="product-tabs-nav-trigger-wrapper">
+					<a class="product-tabs-nav-trigger" data-name="page_{$page.url}" href="{$wa->shop->productUrl($product, 'page', ['page_url' => $page.url])}">{$page.name|escape}
+					</a>
+				</h2> {/foreach}
+				</div>
+
+				<!-- plugin hook: 'frontend_product.block' -->
+				{* @event frontend_product.%plugin_id%.block *} {if $product.tags}
+				<!-- tags -->
+				<div class="tags" id="product-tags">
+					{foreach $product.tags as $t}
+					<a href="{$wa->getUrl('/frontend/tag', ['tag' => urlencode($t)])}">{$t}</a> {/foreach}
 				</div>
 				{/if}
-				<!--END Предпросмотр-->
-				{* {if !empty($theme_settings.reviews_vk)}
-				<h2 class="product-tabs-nav-trigger-wrapper">
-				<a class="product-tabs-nav-trigger" data-name="reviews_vk" href="{$wa->shop->productUrl($product)}">[`User reviews`] VK</a>
-			</h2>
-				<div id="product-tab-reviews_vk" class="product-tab">{$theme_settings.reviews_vk}</div>
-				{/if} {if !empty($theme_settings.reviews_fb)}
-				<h2 class="product-tabs-nav-trigger-wrapper">
-				<a class="product-tabs-nav-trigger" data-name="reviews_fb" href="{$wa->shop->productUrl($product)}">[`User reviews`] Facebook</a>
-			</h2>
-				<div id="product-tab-reviews_fb" class="product-tab">{$theme_settings.reviews_fb}</div>
-				{/if} *}
-				{foreach $product.pages as $page}
-				<h2 class="product-tabs-nav-trigger-wrapper">
-				<a class="product-tabs-nav-trigger" data-name="page_{$page.url}" href="{$wa->shop->productUrl($product, 'page', ['page_url' => $page.url])}">{$page.name|escape}
-				</a>
-			</h2> {/foreach}
 			</div>
-
-			<!-- plugin hook: 'frontend_product.block' -->
-			{* @event frontend_product.%plugin_id%.block *} {if $product.tags}
-			<!-- tags -->
-			<div class="tags" id="product-tags">
-				{foreach $product.tags as $t}
-				<a href="{$wa->getUrl('/frontend/tag', ['tag' => urlencode($t)])}">{$t}</a> {/foreach}
+			<div class="art-photo_and_social">
+					{if !empty($theme_settings.share)}
+					<!-- share -->
+					<div class="art-wrap-social">
+						<div><span>Поделиться:</span></div>
+						<!--{$theme_settings.share}-->
+						<div class="art-social-cart">
+							<ul>
+							<li class="art-social-item-cart">
+									<a href="#">
+											<img src="/wa-data/public/site/themes/profitbuy/img/instagram_black.png"></a>
+							</li>
+							<li class="art-social-item-cart">
+									<a href="#">
+											<img src="/wa-data/public/site/themes/profitbuy/img/facebook_black.png"></a>
+							</li>
+							<li class="art-social-item-cart">
+									<a href="#">
+											<img src="/wa-data/public/site/themes/profitbuy/img/vk_black.png"></a>
+							</li>
+							<li class="art-social-item-cart">
+									<a href="#">
+											<img src="/wa-data/public/site/themes/profitbuy/img/twitter_black.png"></a>
+							</li>
+						</ul>
+					</div>
+					</div>
+					{/if}
 			</div>
-			{/if}
 		</div>
+		<div class="col-grid s12 l5">ЗДесь будет выбор отделки</div>
 
 	</div>
 	<!-- END Нижняя часть страницы с описанием, характеристиками товара -->
