--- a/httpdocs/wa-data/public/shop/themes/profitbuy/product.html
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/product.html
@@ -112,7 +112,39 @@
 							{/if}
 							{* end Скрытие определенных характеристик*}
 
+							<div class="art-photo_and_social">
+									{if !empty($theme_settings.share)}
+									<!-- share -->
+									<div class="art-wrap-social">
+										<div><span>Поделиться:</span></div>
+										<!--{$theme_settings.share}-->
+										<div class="art-social-cart">
+											<ul>
+											<li class="art-social-item-cart">
+													<a href="#">
+															<img src="/wa-data/public/site/themes/profitbuy/img/instagram_black.png"></a>
+											</li>
+											<li class="art-social-item-cart">
+													<a href="#">
+															<img src="/wa-data/public/site/themes/profitbuy/img/facebook_black.png"></a>
+											</li>
+											<li class="art-social-item-cart">
+													<a href="#">
+															<img src="/wa-data/public/site/themes/profitbuy/img/vk_black.png"></a>
+											</li>
+											<li class="art-social-item-cart">
+													<a href="#">
+															<img src="/wa-data/public/site/themes/profitbuy/img/twitter_black.png"></a>
+											</li>
+										</ul>
+									</div>
+									</div>
+									{/if}
+							</div>
+
+
 					</div>
+
 			</div>
 
 	</div>
@@ -282,49 +314,10 @@
 				</div>
 				{/if}
 			</div>
-			<div class="art-photo_and_social">
-					{if !empty($theme_settings.share)}
-					<!-- share -->
-					<div class="art-wrap-social">
-						<div><span>Поделиться:</span></div>
-						<!--{$theme_settings.share}-->
-						<div class="art-social-cart">
-							<ul>
-							<li class="art-social-item-cart">
-									<a href="#">
-											<img src="/wa-data/public/site/themes/profitbuy/img/instagram_black.png"></a>
-							</li>
-							<li class="art-social-item-cart">
-									<a href="#">
-											<img src="/wa-data/public/site/themes/profitbuy/img/facebook_black.png"></a>
-							</li>
-							<li class="art-social-item-cart">
-									<a href="#">
-											<img src="/wa-data/public/site/themes/profitbuy/img/vk_black.png"></a>
-							</li>
-							<li class="art-social-item-cart">
-									<a href="#">
-											<img src="/wa-data/public/site/themes/profitbuy/img/twitter_black.png"></a>
-							</li>
-						</ul>
-					</div>
-					</div>
-					{/if}
-			</div>
+
 		</div>
-		<div class="col-grid s12 l5 art-vivod-otdelki">
-			<div class="otdelka-txt">выбрать другую отделку</div>
-			<div class="art-otdelka">{$collection = $wa->shop->products("category/`$product.category_id`")}
-    {if count($collection)>0}
-      <ul>
-      {foreach $collection as $pcoll}
-        {if $pcoll.id != $product.id}
-          <li><a title="{$pcoll.name}" href="{$pcoll.frontend_url}">{$wa->shop->productImgHtml($pcoll, '96x0', ['itemprop' => 'image', 'alt' => $pcoll.name, 'default' => "`$wa_theme_url`img/dummy96.png"])}</a></li>
-        {/if}
-      {/foreach}
-      </ul>
-    {/if}
-	</div>
+		<div class="col-grid s12 l5">
+
 		</div>
 
 	</div>
